--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.1",
         "livewire/livewire": "^2.12",
+        "midtrans/midtrans-php": "^2.6",
         "stripe/stripe-php": "^10.13"
     },
     "require-dev": {
